fixed off-center loader, added ip geolocation app to projects, and updated resume

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,22 +31,25 @@ textarea {
   display: flex;
   position: absolute;
   top: 0;
+  bottom: 0;
+  left: -3vw;
+  right: 0;
   width: 100%;
-  height: 100vh;
   align-items: center;
   justify-content: center;
   z-index: -10;
   .loader-active {
     display: block;
+    margin: 0 auto;
     position: absolute;
     opacity: 1;
     animation: fadeOut .5s 1s;
     animation-fill-mode: forwards;
-    
+
     &::before {
       content: 'Ethan';
       position: absolute;
-      right: -45px;
+      right: -38px;
       height: 100%;
       bottom: 100px;
       margin: 0 auto;
@@ -56,7 +59,7 @@ textarea {
     &::after {
       content: 'Amato';
       position: absolute;
-      right: -45px;
+      right: -38px;
       top: 80px;
       margin: 0 auto;
       font-size: 30px;
